# qadgop.goodall.com:/home/doug/CLionProjects/vpacombo

cmake_minimum_required(VERSION 3.23)
project(vpacombo)

set(CMAKE_CXX_STANDARD 20)

add_library(library library.cpp )

add_executable(
        vpacombo
        main.cpp    main.h

























































































































































































































































































)